--- a/CursoPracticoDeJavaScript/css/app.css
+++ b/CursoPracticoDeJavaScript/css/app.css
@@ -1,86 +1,113 @@
-
 html {
-    box-sizing: border-box;
-   font-size: 62.5%;
+  box-sizing: border-box;
+  font-size: 62.5%;
 }
 body {
-    font-size: 1.6rem;
-    font-family: 'Lato', sans-serif;
-    background-color: #1E293B;
+  font-size: 1.6rem;
+  font-family: 'Lato', sans-serif;
+  background-color: #1e293b;
 }
-*, *:before, *:after {
-    box-sizing: inherit;
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
 }
 
 header {
-    padding: 3rem 0;
+  padding: 3rem 0;
 }
 
 header h1 {
-    text-align: center;
-    color: #2563EB;
-    font-size: 6rem;
+  text-align: center;
+  color: #2563eb;
+  font-size: 6rem;
 }
 header p {
-    color: #E2E8F0;
-    text-align: center;
-    font-size: 3.2rem;
+  color: #e2e8f0;
+  text-align: center;
+  font-size: 3.2rem;
 }
 header p a {
-    text-decoration: none;
-    color: #3B82F6;
+  text-decoration: none;
+  color: #3b82f6;
 }
 
 .DOM {
-    max-width: 120rem;
-    margin: 0 auto;
+  max-width: 120rem;
+  margin: 0 auto;
 }
 .DOM h2 {
-    color: #FFF;
-    text-align: center;
+  color: #fff;
+  text-align: center;
 }
 .DOM nav a {
-    color: #FFF;
-    font-size: 20px;
-    text-decoration: none;
-    margin-right: 10px;
+  color: #fff;
+  font-size: 20px;
+  text-decoration: none;
+  margin-right: 10px;
 }
 .DOM p {
-    color: #2563EB;
-    font-size: 20px;
+  color: #2563eb;
+  font-size: 20px;
 }
 
 .DOM #formulario {
-    max-width: 500px;
-    margin: 0 auto;
+  max-width: 500px;
+  margin: 0 auto;
 }
 .DOM #formulario input {
-    display: block;
-    width: 100%;
-    border: none;
-    margin-bottom: 2rem;
-    padding: 2rem;
-    border-radius: 1rem;
+  display: block;
+  width: 100%;
+  border: none;
+  margin-bottom: 2rem;
+  padding: 2rem;
+  border-radius: 1rem;
 }
 
-.DOM #formulario input[type="submit"] {
-    background-color: #2563EB;
-    font-weight: 700;
-    text-transform: uppercase;
-    font-size: 20px;
-    color: #FFF;
+.DOM #formulario input[type='submit'] {
+  background-color: #2563eb;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 20px;
+  color: #fff;
 }
 
 .alerta {
-    padding: 1rem;
-    text-align: center;
-    color: #FFF;
-    text-transform: uppercase;
-    font-size: 20px;
+  padding: 1rem;
+  text-align: center;
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 20px;
 }
 .alerta.error {
-    background-color: rgb(162, 0, 0);
+  background-color: rgb(162, 0, 0);
 }
 .alerta.exito {
-    background-color: rgb(7, 145, 7);;
+  background-color: rgb(7, 145, 7);
+}
+
+/* links css */
+.section--link-page {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.section--link-page ul {
+  outline: none;
+}
+.section--link-page ul li {
+  margin-right: 1rem;
+  font-size: 2rem;
+  list-style: none;
+}
+.section--link-page ul li a {
+  padding: 5px 15px;
+  color: #ffffff;
+  border: 1px solid #3b82f6;
+  outline: none;
+  text-decoration: none;
+}
+.section--link-page ul li a:hover {
+  color: #2563eb;
 }
